# braindump

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
src/braindump/: cli.py  config.py  progress.py
src/braindump/commands/: dedupe.py  download.py  extract.py  generate.py  group.py  lookup.py  place.py  run.py  status.py  synthesize.py
